# demo_ep

./: README.md  README_TESTS.md  base_paths.py  create_presentation.py  demo_composite.py  demo_nd_infra.py  demo_simple.py  design_goals.md  endpoint_design_benefits.md  endpoint_library_presentation.pptx  endpoint_mixins.py  endpoint_query_params.py  endpoints.py  enums.py  env  ep_api_v1_infra_aaa.py  onemanage_fabric_endpoints.py  onemanage_link_endpoints.py  onemanage_network_endpoints.py  onemanage_vrf_endpoints.py  pydantic_compat.py  pyproject.toml  query_params.py  test_base_paths.py  test_endpoints.py  test_enums.py  test_ep_api_v1_infra_aaa.py  test_query_params.py
