[project]
name = "demo-ep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pydantic>=2.12.5",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.black]
line-length = 159

[tool.ruff]
line-length = 159

[tool.isort]
line_length = 159

[tool.pylint.format]
max-line-length = 159
